--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-particles-js": "^2.3.0"
