--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-particles-js": "^2.3.0"
