--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/reujab/recovery#readme",
   "devDependencies": {
+    "@types/ini": "^1.3.29",
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
@@ -32,6 +33,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "ini": "^1.3.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-particles-js": "^2.3.0"
