--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
     "@blueprintjs/core": "^3.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "ini": "^1.3.5",
     "react": "^16.6.3",
