--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/reujab/recovery#readme",
   "devDependencies": {
     "@types/ini": "^1.3.29",
+    "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
