--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "ini": "^1.3.5",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-particles-js": "^2.3.0"
